pixel perfect modal mobile

--- a/source/form.html
+++ b/source/form.html
@@ -238,7 +238,7 @@
 <!--Модальные окна
 <div class="modal modal__container">
       <div class="modal modal--error">
-              <section class="modal__content">
+              <section class="modal__content modal-content--error">
                 <div class="modal__text-wrapper modal__text-wrapper--error">
                 <h2 class="modal__title modal__title--error">Что-то пошло не так!</h2>
                 <p class="modal__description modal__description-error"> Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -247,13 +247,13 @@
               </section>
             </div>
             </div>
-
+-->
             <div class="modal modal__container">
               <div class="modal modal--success">
-                      <section class="modal__content">
+                      <section class="modal__content modal-content--success">
                       <div class="modal__text-wrapper modal__text-wrapper--success">
                         <h2 class="modal__title modal__title--success">Ваш отзыв отправлен!</h2>
-                        <p class="modal__description modal__description-success"> Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+                        <p class="modal__description modal__description-success"> Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы опубликуем его на сайте.</p>
 
                         </div>
                         <div class="modal__button-wrapper">
@@ -263,4 +263,4 @@
                       </section>
                     </div>
                     </div>
--->
+
