--- a/source/form.html
+++ b/source/form.html
@@ -134,7 +134,7 @@
             </div>
             <div class="feedback__wrapper feedback__wrapper--line">
               <fieldset class="feedback__field  feedback__field--choose">
-                <legend class="feedback__title feedback__title--line">посещенные достопримечательности:</legend>
+                <legend class="feedback__title feedback__title--sites">посещенные <br>достопримечательности:</legend>
                 <ul class="feedback__list feedback__list--sites">
                   <li class="feedback__item feedback__item--choice">
                     <label class="feedback__form-label feedback__control">
@@ -167,15 +167,16 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="feedback__wrapper">
+            <div class="feedback__wrapper feedback__wrapper--line">
               <fieldset class="feedback__field feedback__field--textarea feedback__field--choose">
                 <legend class="feedback__title feedback__title--line">Опишите свои эмоции:</legend>
 
                 <textarea class="feedback__textarea" name="text"
                   id="text">Опишите подробно все свои восторги </textarea>
+                  <div class="feedback__button-wrapper">
                 <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
                 <p class="feedback__text">* — обязательные поля</p>
-
+</div>
               </fieldset>
             </div>
 
@@ -247,7 +248,7 @@
               </section>
             </div>
             </div>
--->
+
             <div class="modal modal__container">
               <div class="modal modal--success">
                       <section class="modal__content modal-content--success">
@@ -263,4 +264,4 @@
                       </section>
                     </div>
                     </div>
-
+-->
