--- a/source/form.html
+++ b/source/form.html
@@ -223,10 +223,10 @@
         </div>
         <div class="html-academy">
           <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="html-academy__description">Разработано</p>
-            <svg class="html-academy__img" width="27" height="35">
-              <use xlink:href="img/sprite.svg#icon-html"></use></svg>
-          </a>
+            Разработано
+              <svg class="html-academy__img" width="27" height="35">
+                <use xlink:href="img/sprite.svg#icon-html"></use></svg>
+            </a>
         </div>
       </footer>
     </div>
