--- a/source/index.html
+++ b/source/index.html
@@ -191,7 +191,7 @@
       </div>
       <div class="html-academy">
         <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <p class="html-academy__description">Разработано</p>
+        Разработано
           <svg class="html-academy__img" width="27" height="35">
             <use xlink:href="img/sprite.svg#icon-html"></use></svg>
         </a>
