--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,8 @@
                 <use xlink:href="img/sprite.svg#icon-closed"></use>
               </svg>
               <svg class="nav__img--opened" width="22" height="22">
-                <use xlink:href="img/sprite.svg#icon-opened"></use> </svg>
+                <use xlink:href="img/sprite.svg#icon-opened"></use>
+              </svg>
               <span class="visually-hidden">Открыть меню</span>
             </button>
             <ul class="nav__list site-list">
@@ -60,7 +61,8 @@
         </header>
         <section class="about-catalog">
           <h2 class="about-catalog__title">Фото и видео</h2>
-          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? <br> Фотографии помогут вам
+          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? <br> Фотографии помогут
+            вам
             забыть
             о
             политике и экономике.</p>
@@ -72,9 +74,12 @@
               <div class="fotoalbum__picture-wrapper fotoalbum__picture-wrapper--first-line">
                 <picture>
 
-              <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog/landscape-desktop.webp 1x, img/catalog/landscape-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/landscape-tablet.webp 1x, img/catalog/landscape-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/catalog/landscape-mobile.webp, img/catalog/landscape-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/catalog/landscape-desktop.webp 1x, img/catalog/landscape-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/catalog/landscape-tablet.webp 1x, img/catalog/landscape-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/catalog/landscape-mobile.webp, img/catalog/landscape-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)"
                     srcset="img/catalog/landscape-desktop.jpg 1x, img/catalog/landscape-desktop@2x.jpg 2x">
@@ -91,8 +96,9 @@
                 </div>
                 <div class="fotoalbum__number-wrapper">
                   <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like"  width="23" height="21">
-                    <use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                    <svg class="fotoalbum__like" width="23" height="21">
+                      <use xlink:href="img/sprite.svg#icon-like"></use>
+                    </svg>
                     <span class="visually-hidden">Лайк</span>
                   </button>
                   <p class="fotoalbum__number">1350</p>
@@ -117,8 +123,9 @@
                 </div>
                 <div class="fotoalbum__number-wrapper">
                   <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like"  width="23" height="21">
-                      <use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                    <svg class="fotoalbum__like" width="23" height="21">
+                      <use xlink:href="img/sprite.svg#icon-like"></use>
+                    </svg>
                     <span class="visually-hidden">Лайк</span>
                   </button>
                   <p class="fotoalbum__number">143</p>
@@ -144,8 +151,9 @@
                 </div>
                 <div class="fotoalbum__number-wrapper">
                   <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like"  width="23" height="21">
-                      <use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                    <svg class="fotoalbum__like" width="23" height="21">
+                      <use xlink:href="img/sprite.svg#icon-like"></use>
+                    </svg>
                     <span class="visually-hidden">Лайк</span>
                   </button>
                   <p class="fotoalbum__number">96</p>
@@ -170,8 +178,9 @@
                 </div>
                 <div class="fotoalbum__number-wrapper">
                   <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like"  width="23" height="21">
-                      <use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                    <svg class="fotoalbum__like" width="23" height="21">
+                      <use xlink:href="img/sprite.svg#icon-like"></use>
+                    </svg>
                     <span class="visually-hidden">Лайк</span>
                   </button>
                   <p class="fotoalbum__number">254</p>
@@ -214,7 +223,7 @@
 
               <a class="button social__button" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Мы в Телеграме</span>
-                <svg class="social__img"  width="24" height="24">
+                <svg class="social__img" width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-tg"></use>
                 </svg>
               </a>
@@ -225,7 +234,8 @@
               <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Мы в Ютубе</span>
                 <svg class="social__img" width="24" height="24">
-                  <use xlink:href="img/sprite.svg#icon-yt"></use> </svg>
+                  <use xlink:href="img/sprite.svg#icon-yt"></use>
+                </svg>
               </a>
 
             </li>
@@ -234,9 +244,10 @@
         <div class="html-academy">
           <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
             Разработано
-              <svg class="html-academy__img" width="27" height="35">
-                <use xlink:href="img/sprite.svg#icon-html"></use></svg>
-            </a>
+            <svg class="html-academy__img" width="27" height="35">
+              <use xlink:href="img/sprite.svg#icon-html"></use>
+            </svg>
+          </a>
         </div>
       </footer>
     </div>
