--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,8 @@
               <use xlink:href="img/sprite.svg#icon-closed"></use>
             </svg>
             <svg class="nav__img--opened" width="22" height="22">
-              <use xlink:href="img/sprite.svg#icon-opened"></use> </svg>
+              <use xlink:href="img/sprite.svg#icon-opened"></use>
+            </svg>
             <span class="visually-hidden">Открыть меню</span>
           </button>
 
@@ -59,7 +60,8 @@
         </picture>
       </header>
       <section class="text-block about-sedona">
-        <h2 class="text-block__title about-sedona__title">СЕДОНА — небольшой<br> городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="text-block__title about-sedona__title">СЕДОНА — небольшой<br> городок в Аризоне, заслуживающий
+          большего!</h2>
         <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
       <section class="advantages">
@@ -91,24 +93,29 @@
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--food">
             <h4 class="advantages__title advantages__title--icon">Еда</h4>
-            <p class="advantages__description advantages__description--icon">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, <br> Вы НЕ разочаруетесь!
+            <p class="advantages__description advantages__description--icon">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, <br>
+              Вы НЕ разочаруетесь!
             </p>
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--souvenir">
             <h4 class="advantages__title advantages__title--icon">Сувениры</h4>
-            <p class="advantages__description advantages__description--icon advantages__description--souvenir">Не только китайского, <br> но и местного производства!</p>
+            <p class="advantages__description advantages__description--icon advantages__description--souvenir">Не только
+              китайского, <br> но и местного производства!</p>
           </li>
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text advantages__text--bridge">
               <h3 class="advantages__title advantages__title--white-theme"> Там есть <br> мост дьявола</h3>
               <p class="advantages__description advantages__description--white-theme"> — №2 —</p>
-              <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно </p>
+              <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br> Если
+                вы осмелитесь, конечно </p>
             </div>
             <picture>
 
-              <source type="image/webp" media="(min-width: 1200px)" srcset="img/bridge-desktop.webp 1x, img/bridge-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="img/bridge-tablet.webp 1x, img/bridge-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/bridge.webp 1x, img/bridge@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 1200px)"
+                srcset="img/bridge-desktop.webp 1x, img/bridge-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/bridge-tablet.webp 1x, img/bridge-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/bridge.webp 1x, img/bridge@2x.webp 2x">
 
               <source media="(min-width: 1200px)" srcset="img/bridge-desktop.jpg 1x, img/bridge-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/bridge-tablet.jpg 1x, img/bridge-tablet@2x.jpg 2x">
@@ -127,7 +134,8 @@
             <div class="advantages__second-line">
               <h3 class="advantages__title">Красивая <br> дорога</h3>
               <p class="advantages__description">— №4 —</p>
-              <p class="advantages__description advantages__description--road">Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
+              <p class="advantages__description advantages__description--road">Ехать в Седону из Лас-Вегаса совсем <br>
+                не скучно!</p>
             </div>
           </li>
           <li class="advantages__item">
@@ -139,7 +147,8 @@
       </section>
       <section class="find-hotel">
         <h2 class="find-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p class="find-hotel__description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="find-hotel__description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
+          гостиниц в седоне</p>
         <button class="find-hotel__button button" type="button">Найти Гостиницу</button>
       </section>
       <section class="map">
@@ -172,7 +181,7 @@
 
             <a class="button social__button" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Мы в Телеграме</span>
-              <svg class="social__img"  width="24" height="24">
+              <svg class="social__img" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-tg"></use>
               </svg>
             </a>
@@ -183,7 +192,8 @@
             <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Мы в Ютубе</span>
               <svg class="social__img" width="24" height="24">
-                <use xlink:href="img/sprite.svg#icon-yt"></use> </svg>
+                <use xlink:href="img/sprite.svg#icon-yt"></use>
+              </svg>
             </a>
 
           </li>
@@ -191,9 +201,10 @@
       </div>
       <div class="html-academy">
         <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-        Разработано
+          Разработано
           <svg class="html-academy__img" width="27" height="35">
-            <use xlink:href="img/sprite.svg#icon-html"></use></svg>
+            <use xlink:href="img/sprite.svg#icon-html"></use>
+          </svg>
         </a>
       </div>
     </footer>
