--- a/source/form.html
+++ b/source/form.html
@@ -23,14 +23,11 @@
         <nav class="nav nav--closed nav--nojs">
           <div class="nav__wrapper">
             <button class="nav__toggle" type="button">
-              <svg class="nav__img--closed" aria-hidden="true" focusable="false" width="23" height="22"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M22.9 0H0v4h22.9V0Zm0 9H0v4h22.9V9Zm0 9H0v4h22.9v-4Z" />
+              <svg class="nav__img--closed" width="23" height="22">
+                <use xlink:href="img/sprite.svg#icon-closed"></use>
               </svg>
-              <svg class="nav__img--opened" aria-hidden="true" focusable="false" width="23" height="23"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M22.2 2.8 19.4 0l-8.3 8.3L2.8 0 0 2.8l8.3 8.3L0 19.4l2.8 2.8 8.3-8.3 8.3 8.3 2.8-2.8-8.3-8.3 8.3-8.3Z" />
+              <svg class="nav__img--opened" width="22" height="22">
+                <use xlink:href="img/sprite.svg#icon-opened"></use>
               </svg>
               <span class="visually-hidden">Открыть меню</span>
             </button>
@@ -85,7 +82,7 @@
               </fieldset>
             </div>
             <div class="feedback__wrapper feedback__wrapper--left">
-              <fieldset class="feedback__field">
+              <fieldset class="feedback__field feedback__field--left">
                 <legend class="feedback__title">Контактная информация:</legend>
                 <label class="feedback__form-label feedback__form-label--contacts" for="number">Контактный
                   телефон*:</label>
@@ -138,7 +135,7 @@
             </div>
             <div class="feedback__wrapper feedback__wrapper--line">
               <fieldset class="feedback__field  feedback__field--choose">
-                <legend class="feedback__title feedback__title--line">посещенные достопримечательности:</legend>
+                <legend class="feedback__title feedback__title--sites">посещенные <br>достопримечательности:</legend>
                 <ul class="feedback__list feedback__list--sites">
                   <li class="feedback__item feedback__item--choice">
                     <label class="feedback__form-label feedback__control">
@@ -171,15 +168,17 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="feedback__wrapper">
+            <div class="feedback__wrapper feedback__wrapper--line">
               <fieldset class="feedback__field feedback__field--textarea feedback__field--choose">
-                <legend class="feedback__title feedback__title--line">Опишите свои эмоции:</legend>
+                <legend class="feedback__title feedback__title--line feedback__title--textarea">Опишите свои эмоции:
+                </legend>
 
                 <textarea class="feedback__textarea" name="text"
                   id="text">Опишите подробно все свои восторги </textarea>
-                <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
-                <p class="feedback__text">* — обязательные поля</p>
-
+                <div class="feedback__button-wrapper">
+                  <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+                  <p class="feedback__text">* — обязательные поля</p>
+                </div>
               </fieldset>
             </div>
 
@@ -196,17 +195,8 @@
             <li class="social__item">
 
               <a class="button social__button" href="https://vk.com/htmlacademy">
-                <svg class="social__img" aria-hidden="true" focusable="false" width="24" height="24"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#a)">
-                    <path
-                      d="M23.45 5.948c.166-.546 0-.948-.795-.948H20.03c-.668 0-.976.347-1.143.73 0 0-1.335 3.196-3.226 5.272-.612.602-.89.793-1.224.793-.167 0-.418-.191-.418-.738V5.948c0-.656-.184-.948-.74-.948H9.151c-.417 0-.668.304-.668.593 0 .621.946.765 1.043 2.513v3.798c0 .833-.153.984-.487.984-.89 0-3.055-3.211-4.34-6.885C4.45 5.288 4.198 5 3.527 5H.9c-.75 0-.9.347-.9.73 0 .682.89 4.07 4.145 8.551C6.315 17.341 9.37 19 12.153 19c1.669 0 1.875-.368 1.875-1.003v-2.313c0-.737.158-.884.687-.884.39 0 1.057.192 2.615 1.667C19.11 18.216 19.403 19 20.405 19h2.625c.75 0 1.126-.368.91-1.096-.238-.724-1.088-1.775-2.215-3.022-.612-.71-1.53-1.475-1.809-1.858-.389-.491-.278-.71 0-1.147 0 0 3.2-4.426 3.533-5.929h.001Z" />
-                  </g>
-                  <defs>
-                    <clipPath id="a">
-                      <path d="M0 0h24v24H0z" />
-                    </clipPath>
-                  </defs>
+                <svg class="social__img" width="24" height="24">
+                  <use xlink:href="img/sprite.svg#icon-vk"></use>
                 </svg>
                 <span class="visually-hidden"> Мы в Вконтакте</span>
               </a>
@@ -216,10 +206,8 @@
 
               <a class="button social__button" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Мы в Телеграме</span>
-                <svg class="social__img" aria-hidden="true" focusable="false" width="24" height="24"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m21.44 1.622-3.17 14.944c-.239 1.055-.862 1.317-1.748.82l-4.828-3.557-2.33 2.24c-.258.259-.473.474-.97.474l.347-4.917 8.948-8.086c.39-.347-.084-.54-.604-.192L6.022 10.314 1.26 8.823C.224 8.5.205 7.787 1.476 7.29L20.104.113c.862-.323 1.617.192 1.335 1.51Z" />
+                <svg class="social__img" width="24" height="24">
+                  <use xlink:href="img/sprite.svg#icon-tg"></use>
                 </svg>
               </a>
 
@@ -228,10 +216,8 @@
 
               <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Мы в Ютубе</span>
-                <svg class="social__img" aria-hidden="true" focusable="false" width="24" height="24"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M19.181 5H4.813C3.306 5 2 6.3 2 7.8v8.3C2 17.7 3.306 19 4.813 19h14.368c1.608 0 2.814-1.3 2.814-2.8V7.8c.1-1.5-1.206-2.8-2.814-2.8ZM9.033 15.4V8.6l6.833 3.4-6.833 3.4Z" />
+                <svg class="social__img" width="24" height="24">
+                  <use xlink:href="img/sprite.svg#icon-yt"></use>
                 </svg>
               </a>
 
@@ -240,11 +226,9 @@
         </div>
         <div class="html-academy">
           <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="html-academy__description">Разработано</p>
-            <svg class="html-academy__img" aria-hidden="true" focusable="false" width="27" height="35"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
+            Разработано
+            <svg class="html-academy__img" width="27" height="35">
+              <use xlink:href="img/sprite.svg#icon-html"></use>
             </svg>
           </a>
         </div>
@@ -259,7 +243,7 @@
 <!--Модальные окна
 <div class="modal modal__container">
       <div class="modal modal--error">
-              <section class="modal__content">
+              <section class="modal__content modal-content--error">
                 <div class="modal__text-wrapper modal__text-wrapper--error">
                 <h2 class="modal__title modal__title--error">Что-то пошло не так!</h2>
                 <p class="modal__description modal__description-error"> Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -271,10 +255,10 @@
 
             <div class="modal modal__container">
               <div class="modal modal--success">
-                      <section class="modal__content">
+                      <section class="modal__content modal-content--success">
                       <div class="modal__text-wrapper modal__text-wrapper--success">
                         <h2 class="modal__title modal__title--success">Ваш отзыв отправлен!</h2>
-                        <p class="modal__description modal__description-success"> Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+                        <p class="modal__description modal__description-success"> Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы опубликуем его на сайте.</p>
 
                         </div>
                         <div class="modal__button-wrapper">
