--- a/source/form.html
+++ b/source/form.html
@@ -66,7 +66,7 @@
             </div>
             <div class="feedback__wrapper feedback__wrapper--left">
               <fieldset class="feedback__field feedback__field--left">
-                <legend class="feedback__title">Контактная информация:</legend><label
+                <legend class="feedback__title feedback__title--contacts">Контактная информация:</legend><label
                   class="feedback__form-label feedback__form-label--contacts" for="number">Контактный телефон*:</label>
                 <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
                   name="phone-number" id="number" required> <button class="feedback__button feedback__button--phone"
@@ -199,4 +199,4 @@
                       </section>
                     </div>
                     </div>
--->
+    -->
