--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
+
+  <link rel="preload" href="img/welcome-mobile@2x.jpg" as="image">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
@@ -59,6 +61,11 @@
                 туристов,<br>там течет своя жизнь</p>
             </div>
             <picture>
+              <source type="image/webp" media="(min-width: 1200px)"
+                srcset="img/city-desktop.webp, img/city-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/city-tablet.webp, img/city-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/city.webp, img/city@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="img/city-desktop.jpg, img/city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/city-tablet.jpg, img/city-tablet@2x.jpg 2x"><img
                 class="advantages__img" src="img/city.jpg" width="320" height="260" srcset="img/city@2x.jpg 2x"
