--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
+  <link rel="preload" href="img/catalog/back-catalog-mobile@2x.jpg" as="image">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
