--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="preload" href="img/catalog/back-catalog-mobile@2x.jpg" as="image">
   <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <link rel="preload" href="img/catalog/back-catalog-mobile@2x.jpg" as="image">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
@@ -179,8 +179,8 @@
           <h2 class="video__title">Все еще сомневаетесь?</h2>
           <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
             очередной раз!</p>
-          <div class="video__player"><button class="video__button" aria-label="Проиграть видео"></button><video class="video__container" width="280"
-              poster="img/catalog/video-mobile.jpg"></video></div>
+          <div class="video__player"><button class="video__button" aria-label="Проиграть видео"></button><video
+              class="video__container" width="280" poster="img/catalog/video-mobile.jpg"></video></div>
         </section>
       </main>
       <!--Подвал-->
