--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <link rel="preload" href="img/catalog/back-catalog-mobile@2x.jpg" as="image">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
@@ -86,6 +88,11 @@
             <li class="fotoalbum__item">
               <div class="fotoalbum__picture-wrapper">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/catalog/flora-desktop.webp, img/catalog/flora-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/catalog/flora-tablet.webp, img/catalog/flora-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/flora-mobile.webp, img/catalog/flora-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)"
                     srcset="img/catalog/flora-desktop.jpg, img/catalog/flora-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
@@ -110,6 +117,11 @@
             <li class="fotoalbum__item">
               <div class="fotoalbum__picture-wrapper">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/catalog/road-desktop.webp, img/catalog/road-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/catalog/road-tablet.webp, img/catalog/road-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/road-mobile.webp, img/catalog/road-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)"
                     srcset="img/catalog/road-desktop.jpg, img/catalog/road-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
@@ -134,6 +146,12 @@
             <li class="fotoalbum__item">
               <div class="fotoalbum__picture-wrapper">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)"
+                    srcset="img/catalog/bridge-desktop.webp, img/catalog/bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/catalog/bridge-tablet.webp, img/catalog/bridge-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/catalog/bridge-mobile.webp, img/catalog/bridge-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)"
                     srcset="img/catalog/bridge-desktop.jpg, img/catalog/bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
@@ -161,8 +179,8 @@
           <h2 class="video__title">Все еще сомневаетесь?</h2>
           <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
             очередной раз!</p>
-          <div class="video__player"><button class="video__button"></button><video class="video__container" width="280"
-              poster="img/catalog/video-mobile.jpg"></video></div>
+          <div class="video__player"><button class="video__button" aria-label="Проиграть видео"></button><video
+              class="video__container" width="280" poster="img/catalog/video-mobile.jpg"></video></div>
         </section>
       </main>
       <!--Подвал-->
