--- a/source/index.html
+++ b/source/index.html
@@ -20,10 +20,10 @@
     <header class="header"><a class="header__logo" href="index.html"><img class="header__img" src="img/logo_sedona.svg"
           width="185" height="96" alt="Логотип Седоны"></a>
       <nav class="nav nav--closed nav--nojs">
-        <div class="nav__wrapper"><button class="nav__toggle" type="button"><svg class="nav__img--closed" width="23"
-              height="22">
+        <div class="nav__wrapper"><button class="nav__toggle" type="button"><svg class="nav__img nav__img--closed"
+              width="23" height="22">
               <use xlink:href="img/sprite.svg#icon-closed"></use>
-            </svg> <svg class="nav__img--opened" width="22" height="22">
+            </svg> <svg class="nav__img nav__img--opened" width="22" height="22">
               <use xlink:href="img/sprite.svg#icon-opened"></use>
             </svg> <span class="visually-hidden">Открыть меню</span></button>
           <ul class="nav__list site-list">
@@ -126,6 +126,7 @@
             <p class="advantages__description">— №5 —</p>
             <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
+
         </ol>
       </section>
       <section class="find-hotel">
@@ -150,8 +151,9 @@
                 class="social__img" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-vk"></use>
               </svg> <span class="visually-hidden">Мы в Вконтакте</span></a></li>
-          <li class="social__item"><a class="button social__button" href="https://t.me/htmlacademy"><span
-                class="visually-hidden">Мы в Телеграме</span> <svg class="social__img" width="24" height="24">
+          <li class="social__item"><a class="button social__button social__button--tg"
+              href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span> <svg
+                class="social__img social__img--tg" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-tg"></use>
               </svg></a></li>
           <li class="social__item"><a class="button social__button"
