--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,7 +49,7 @@
         </header>
         <section class="about-catalog">
           <h2 class="about-catalog__title">Фото и видео</h2>
-          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса?<br>Фотографии помогут вам
+          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса?<br> &nbsp;Фотографии помогут вам
             забыть о политике и экономике.</p>
         </section>
         <section class="fotoalbum">
