Устраняет недочеты по pixel perfect

--- a/source/form.html
+++ b/source/form.html
@@ -117,7 +117,7 @@
                     <label class="feedback__form-label feedback__control feedback__control--circle">
                       <input class="visually-hidden feedback__choice" type="radio" name="feedback" value="hard to say" checked="checked">
                       <span class="feedback__mark feedback__mark--circle"></span>
-                      <span class="feedback__control-label">Затрудняюсь ответить</span>
+                      <span class="feedback__control-label">Затрудняюсь ответить </span>
                     </label>
                   </li>
                 </ul>
@@ -152,7 +152,7 @@
                     <label class="feedback__form-label feedback__control">
                       <input class="visually-hidden feedback__choice" type="checkbox" name="red rocks">
                       <span class="feedback__mark"></span>
-                      <span class="feedback__control-label">Красные скалы</span>
+                      <span class="feedback__control-label">Красные скалы </span>
                     </label>
                   </li>
                 </ul>
@@ -164,7 +164,7 @@
                 <label class="visually-hidden" for="text">Форма для комментариев</label>
                 <textarea class="feedback__textarea" name="text" id="text">Опишите подробно все свои восторги </textarea>
                 <div class="feedback__button-wrapper">
-                  <button class="button feedback__button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ</button>
+                  <button class="button feedback__button-blue" type="submit">ОТПРАВИТЬ ОТЗЫВ</button>
                   <p class="feedback__text">* — обязательные поля</p>
                 </div>
               </fieldset>
@@ -195,11 +195,12 @@
                 </svg>
               </a>
             </li>
-            <li class="social__item"><a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
+            <li class="social__item">
+              <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Мы в Ютубе</span>
               <svg class="social__img" width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-yt"></use>
-                </svg>
+              </svg>
               </a>
             </li>
           </ul>
